--- a/platform/app/.recipes/Nginx-Orthanc/docker-compose.yml
+++ b/platform/app/.recipes/Nginx-Orthanc/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       # - letsencrypt_challenges:/var/www/letsencrypt
     ports:
       - '443:443' # SSL
-      - '80:80' # Web
+      - '8086:8086' # Web
     depends_on:
       #   - keycloak
       - orthanc
@@ -43,4 +43,5 @@ services:
     restart: unless-stopped
     ports:
       - '4242:4242' # Orthanc REST API
-      - '8042:8042' # Orthanc HTTP
+      # - '8042:8042' # Orthanc HTTP
+      - '8086:8086' # Orthanc HTTP
