--- a/platform/app/.recipes/Nginx-Orthanc/dockerfile
+++ b/platform/app/.recipes/Nginx-Orthanc/dockerfile
@@ -24,7 +24,9 @@ RUN yarn install
 ENV APP_CONFIG=config/docker-nginx-orthanc.js
 
 # Build the application
-RUN yarn run build
+# RUN yarn run build
+# RUN yarn run dev:orthanc
+RUN yarn run dev:orthanc:no:cache
 
 # # Stage 2: Bundle the built application into a Docker container which runs NGINX using Alpine Linux
 FROM nginx:alpine
@@ -37,7 +39,7 @@ RUN mkdir -p /var/log/nginx /var/www/html
 COPY --from=builder /usr/src/app/platform/app/dist /var/www/html
 
 # # Expose HTTP and HTTPS ports
-EXPOSE 80 443
+EXPOSE 8086 443
 
 # # Start NGINX
 CMD ["nginx", "-g", "daemon off;"]
